# SpaceGameRecreation

./: .gitignore  CMakeLists.txt  README.md
include/: Aircraft.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Engine.hpp  Entity.hpp  Foreach.hpp  Game.hpp  Player.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  StringHelpers.hpp  StringHelpers.inl  World.hpp
src/: Aircraft.cpp  Command.cpp  CommandQueue.cpp  Engine.cpp  Entity.cpp  Game.cpp  Player.cpp  SceneNode.cpp  SpriteNode.cpp  World.cpp  main.cpp
